package com.maquinaturing.builder.producto;

public abstract class Programa {
    public abstract void ejecutar();
}
